[metadata]
name = iocbuilder
version = file: iocbuilder/VERSION
description = IOC builder
author = Michael Abbott
author_email = Michael.Abbott@diamond.ac.uk
 
[options]
zip_safe = False
packages = 
    iocbuilder
    xmlbuilder
    toolkit
    
install_requires =
    dls_dependency_tree
    dls_edm
 
[options.package_data]
iocbuilder = VERSION
 
[options.entry_points]
console_scripts =
    xeb = xmlbuilder.xeb:main
    dls-xml-iocbuilder.py = xmlbuilder.xmlbuilder:main 
    dls-print-template-macros.py = toolkit.print_template_macros:print_template_macros

